# mega_mmap

./: CMakeLists.txt  README.md  deps.sh
analysis/: cbchart.py  cbchart.r  gray_scott.py  larger_resolution.py  lower_memory.py  prefetcher.py  tiering.py  weak_scaling.py  weak_scaling.r
analysis/csv/tiering/: gray_scott_mega.csv
analysis/csv/weak_scaling/: dbscan_udbscan.csv  gray_scott_mpi.csv  kmeans_spark.csv  random_forest_spark.csv  rf_spark.csv
analysis/csv/weak_scaling_r/: dbscan.csv  gray_scott.csv  kmeans.csv  rf.csv
benchmark/: CMakeLists.txt  hermes_test.cc  kmeans.cc  kmeans.py  kmeans_df.cc  kmeans_df.py  mm_dbscan.cc  mm_gadget2conv.cc  mm_kmeans.cc  mm_kmeans_df.cc  mm_random_forest.cc  mm_random_forest_df.cc  mm_scalar.cc  mm_sort.cc  pandas_dbscan.py  pandas_kmeans.py  pandas_random_forest.py  parallel_sort.cc  parallel_sort.py  spark_kmeans.py  spark_random_forest.py  test_types.h
benchmark/gray_scott/: CMakeLists.txt  settings.h
benchmark/gray_scott/gs-mm/: CMakeLists.txt  gray-scott.cc  gray-scott.h  main.cc
benchmark/gray_scott/gs-mpi/: CMakeLists.txt  gray-scott.cc  gray-scott.h  main.cc
benchmark/gray_scott/gs-upc/: CMakeLists.txt  gray-scott.cc  gray-scott.h  main.cc
docker/: deps.Dockerfile
include/mega_mmap/: array.h  macros.h  userfault.h  vector.h  vector_mega_mpi.h  vector_mmap_mpi.h
include/mega_mmap/transaction/: pgas_tx.h  rand_iter_tx.h  seq_iter_tx.h  transaction.h
scripts/: benchmark.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_gray_scott/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_hermes/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_kmeans/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_kmeans_df/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_random_forest/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_random_forest_df/: pkg.py
test/jarvis_mega_mmap/jarvis_mega_mmap/mm_scalar/: pkg.py
test/unit/: CMakeLists.txt  hermes_pgas.cc  hermes_userfault.cc
test/unit/iter-pipelines/: mm_gray_scott_mega_tiering.yaml  mm_gray_scott_mem_mpi.yaml  mm_gray_scott_mpi.yaml  mm_kmeans_mega.yaml  mm_kmeans_scikit.yaml  mm_kmeans_spark.yaml  mm_rf_spark.yaml
test/unit/iter-pipelines/df_resolution/: mm_gray_scott_mega.yaml  mm_gray_scott_mpi.yaml
test/unit/iter-pipelines/tiering/: mm_gray_scott_mega_tiering.yaml
test/unit/iter-pipelines/weak_scaling/: mm_dbscan_mega.yaml  mm_dbscan_mpi.yaml  mm_gray_scott_mega.yaml  mm_gray_scott_mem_mpi.yaml  mm_kmeans_mega.yaml  mm_kmeans_spark.yaml  mm_rf_mega.yaml  mm_rf_spark.yaml
test/unit/pipelines/: mm_dbscan_mega.yaml  mm_dbscan_mmap.yaml  mm_dbscan_pandas.yaml  mm_gadget2.yaml  mm_gadget2_dbscan_mmap.yaml  mm_gadget2_df.yaml  mm_gadget2conv.yaml  mm_gray_scott_mega.yaml  mm_gray_scott_mpi.yaml  mm_hermes_test.yaml  mm_kmeans_df_parquet.yaml  mm_kmeans_df_shared.yaml  mm_kmeans_mega.yaml  mm_kmeans_mmap.yaml  mm_kmeans_pandas.yaml  mm_kmeans_spark.yaml  mm_random_forest_df_parquet.yaml  mm_random_forest_df_parquet_test.yaml  mm_random_forest_df_parquet_train.yaml  mm_random_forest_df_shared.yaml  mm_random_forest_df_shared_test.yaml  mm_random_forest_df_shared_train.yaml  mm_random_forest_mega.yaml  mm_random_forest_mmap.yaml  mm_random_forest_pandas.yaml  mm_scalar_mega.yaml  mm_scalar_mpi.yaml
