#add_executable(hermes_userfault hermes_userfault.cc)
#add_executable(hermes_pgas hermes_pgas.cc)
#target_link_libraries(hermes_pgas ${Hermes_LIBRARIES})

jarvis_test(mm_dbscan_mega)
jarvis_test(mm_dbscan_mmap)
jarvis_test(mm_dbscan_pandas)
jarvis_test(mm_kmeans_df_parquet)
jarvis_test(mm_kmeans_df_shared)
jarvis_test(mm_kmeans_mega)
jarvis_test(mm_kmeans_mmap)
jarvis_test(mm_kmeans_pandas)
jarvis_test(mm_random_forest_df_parquet)
jarvis_test(mm_random_forest_df_shared)
jarvis_test(mm_random_forest_mega)
jarvis_test(mm_random_forest_mmap)
jarvis_test(mm_random_forest_pandas)
